<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRecipes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="ingredients">Ingredients</string>
	<string name="directions">Directions</string>
	<string name="recipe">Recipe</string>
	<string name="new_recipe">New Recipe</string>
	<string name="my_recipe">My Recipes</string>
	<string name="search">Search</string>
	<string name="delete">Delete</string>
	<string name="save">Save</string>
	<string name="deleted"> deleted</string>
</resources>
