<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:menuCategory="secondary"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
<!--     android:icon="@drawable/ic_launcher" -->
    <item
        android:id="@+id/menubar_new_recipe"
        android:menuCategory="alternative"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/new_recipe"/>
    
<!--     <item -->
<!--         android:id="@+id/menubar_delete" -->
<!--         android:menuCategory="alternative" -->
<!--         android:orderInCategory="2" -->
<!--         android:showAsAction="ifRoom" -->
<!--         android:title="@string/delete"/> -->
    
    <item
        android:id="@+id/menubar_search"
        android:menuCategory="alternative"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>

</menu>
